2004-04-19  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fixed STAT command in FXP mode; fixed coredump when
	  disconnecting in FXP mode (when DataAbort disconnects too).

2004-04-16  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.h, misc.cc: (last_char) new utility function.
	* CmdExec.cc, FileAccess.cc, Http.cc, MirrorJob.cc, QueueFeeder.cc,
	  commands.cc, lftp.cc: use last_char.
	* LsCache.cc: don't treat trailing slash as existing directory inidication.
	* GetFileInfo.cc: check for trailing slash here instead of LsCache.cc.

2004-04-14  Alexander V. Lukyanov <lav@yars.free.net>

	* resource.cc: don't enable mlsd by default.

2004-04-13  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: don't check timeout if there should be no activity.
	* Makefile.am: use install-data-hook to do cleaning after install.

2004-04-12  Alexander V. Lukyanov <lav@yars.free.net>

	* FtpListInfo.cc: use sscanf instead of atoll.

2004-04-09  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: support CLNT, HOST commands; send OPTS MLST;
	  translate data in MP_LIST mode.
	* resource.cc: ftp:client new resource.
	* FtpListInfo.cc: support MLSD attrs UNIX.{owner,group,uid,gid};
	  workaround ncftpd bug - it does not append semicolon to last MLST fact.

2004-04-08  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: send ACCT before FEAT after login.
	* OutputJob.cc: don't disable writing when there are data pending,
	  this fixes spinning in cls|less.

2004-04-07  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fixed coredump when ftp:proxy does not have a protocol
	  specified; fixed assertion failure when using ftp over http proxy
	  with CONNECT method.

2004-04-06  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: add "closed by the remote host" string to the transient
	  errors.

2004-04-05  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: fix data packet debug message (s was not initialized);